# dataset-destroyer

./: .gitignore  Cargo.toml  default.yaml
src/: main.rs
src/config/: enumerations.rs  interface.rs  mod.rs
src/config/adjustment/: interface.rs  mod.rs
src/config/compression/: interface.rs  mod.rs
src/config/filter/: interface.rs  mod.rs
src/config/operation/: interface.rs  mod.rs
src/processor/: input.rs  mod.rs  parameter.rs  utils.rs
src/processor/image/: adjustment.rs  compression.rs  filter.rs  mod.rs  operation.rs
