[package]
name = "dataset_destroyer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.78"
console = "0.15.7"
glob = "0.3.1"
image = { version = "0.24.7", features = [
	"webp",
	"webp-encoder",
	"libwebp",
	"rgb",
] }
imageproc = "0.23.0"
indicatif = { version = "0.17.7", features = ["rayon"] }
num-traits = "0.2.17"
rand = { version = "0.8.5", features = ["serde"] }
rayon = "1.8.0"
resize = "0.8.3"
rgb = "0.8.37"
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.29"
