[package]
name = "dataset_destroyer"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.24.7", features = ["webp", "webp-encoder", "rgb"] }
indicatif = { version = "0.17.7", features = ["rayon"] }
serde = { version = "1.0.193", features = ["derive"] }
clap = { version = "4.4.12", features = ["derive"] }
rand = { version = "0.8.5", features = ["serde"] }
num-traits = "0.2.17"
serde_yaml = "0.9.29"
imageproc = "0.23.0"
console = "0.15.7"
anyhow = "1.0.78"
resize = "0.8.3"
rayon = "1.8.0"
glob = "0.3.1"
rgb = "0.8.37"

[profile.dev]
opt-level = 2

[profile.release]
codegen-units = 1
opt-level = 3
strip = true
lto = true